--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -31,3 +31,35 @@ url = {https://doi.org/10.1016/j.jclepro.2018.08.334},
 volume = {204},
 year = {2018}
 }
+@article{Lanis2015,
+abstract = {This study examines whether corporate social responsibility performance is associated with corporate tax avoidance. Employing a matched sample of 434 firm-year observations (i.e., 217 tax-avoidant and 217 non-tax-avoidant firm-year observations) from the Kinder, Lydenberg, and Domini database over the period 2003-2009, our logit regression results show that the higher the level of CSR performance of a firm, the lower the likelihood of tax avoidance. Our results indicate that more socially responsible firms are likely to display less tax avoidance. Finally, the results from our additional analysis show that the CSR categories community relations and diversity represent particularly important elements of CSR performance that reduce tax avoidance. [ABSTRACT FROM AUTHOR]},
+annote = {Accession Number: 101363944; Lanis, Roman 1; Email Address: roman.lanis@uts.edu.au; Richardson, Grant 2; Email Address: grant.richardson@adelaide.edu.au; Affiliations: 1: Accounting Discipline Group, UTS School of Business, University of Technology, Sydney, Corner of Quay Street and Ultimo Road Haymarket, Sydney 2000 Australia; 2: Discipline of Accounting and Information System, The Business School, University of Adelaide, 10 Pulteney Street Adelaide 5005 Australia; Issue Info: Mar2015, Vol. 127 Issue 2, p439; Thesaurus Term: SOCIAL responsibility of business; Thesaurus Term: TAX evasion; Thesaurus Term: REGRESSION analysis; Thesaurus Term: DATABASES; Thesaurus Term: PROFIT maximization; Thesaurus Term: STOCKHOLDER wealth; Thesaurus Term: CORPORATE taxes; Subject Term: LOGITS; Subject Term: COMMUNITY relations; Author-Supplied Keyword: Corporate social responsibility; Author-Supplied Keyword: Society; Author-Supplied Keyword: Tax avoidance; Number of Pages: 19p; Illustrations: 8 Charts; Document Type: Article},
+author = {Lanis, Roman and Richardson, Grant},
+file = {:C\:/Users/HW van der Waal/Dropbox/PhD Project/PAPER 2 SDGs and Tax Discipline/JBE 2015.pdf:pdf},
+issn = {01674544},
+journal = {Journal of Business Ethics},
+keywords = {COMMUNITY relations,CORPORATE taxes,Corporate social responsibility,DATABASES,LOGITS,PROFIT maximization,REGRESSION analysis,SOCIAL responsibility of business,STOCKHOLDER wealth,Society,TAX evasion,Tax avoidance},
+mendeley-groups = {SDG TAX},
+number = {2},
+pages = {439--457},
+title = {{Is Corporate Social Responsibility Performance Associated with Tax Avoidance?}},
+volume = {127},
+year = {2015}
+}
+@article{Jones2017b,
+abstract = {Corporate tax aggressiveness (or avoidance) is widely viewed as socially irresponsible and "unethical" (Hoi et al 2013; Sikka 2010). However, few corporate social responsibility (CSR) studies have considered tax aggressiveness as an explicit component/measure for understanding CSR activity. Based on US data, Hoi et al (2013) find some evidence that firms with excessive irresponsible CSR activities are more aggressive in avoiding taxes. However, they find no evidence of a more general relationship between CSR and tax avoidance. This finding contrasts with the Australian study of Lanis and Richardson (2012), which documents a strong negative relationship between CSR disclosure levels and tax aggressiveness (high CSR disclosure is associated with lower tax aggressiveness). Our study extends the literature by examining the CSR-tax avoidance relationship in a wider international context using sustainability ratings data provided by Ethical Investment Research Services. Based on a large sample of firms across several international reporting jurisdictions, we find some limited evidence of a negative relationship between CSR levels and tax aggressiveness, even after controlling for firm size, industry, region, risk, financial performance and other factors. However, the association is not consistent across all tax avoidance proxies tested nor CSR metrics utilised in this study. Furthermore, when we partition the regression analysis by region, the CSR-tax avoidance relationship was found to be significant on the Asian (including Oceania) sub-sample, but is largely insignificant on the North American, European and UK sub-samples. [ABSTRACT FROM AUTHOR]},
+annote = {Accession Number: 122365920; Jones, Stewart 1; Baker, Max 2; Lay, Ben Forrest 3; Affiliations: 1: Professor, Discipline of Accounting, The University of Sydney Business School, The University of Sydney; 2: Senior Lecturer, Discipline of Accounting, The University of Sydney Business School, The University of Sydney; 3: PhD student, Discipline of Accounting, The University of Sydney Business School, The University of Sydney; Issue Info: 2017, Vol. 32 Issue 1, p95; Thesaurus Term: SOCIAL responsibility of business; Thesaurus Term: TAX evasion; Thesaurus Term: FINANCIAL performance; Thesaurus Term: ETHICAL investments; Subject Term: SUSTAINABILITY; NAICS/Industry Codes: 523999 Miscellaneous Financial Investment Activities; NAICS/Industry Codes: 523930 Investment Advice; Number of Pages: 33p; Document Type: Article},
+author = {Jones, Stewart and Baker, Max and Lay, Ben Forrest},
+file = {:C\:/Users/HW van der Waal/Dropbox/PhD Project/PAPER 2 SDGs and Tax Discipline/32AustlTaxF95.pdf:pdf},
+issn = {0812695X},
+journal = {Australian Tax Forum},
+keywords = {ETHICAL investments,FINANCIAL performance,SOCIAL responsibility of business,SUSTAINABILITY,TAX evasion},
+mendeley-groups = {SDG TAX},
+month = {jan},
+number = {1},
+pages = {95--127},
+title = {{The relationship between CSR and tax avoidance: an international perspective.}},
+url = {http://search.ebscohost.com/login.aspx?direct=true&db=buh&AN=122365920&site=ehost-live},
+volume = {32},
+year = {2017}
+}
